assets/css/neurotidal-style.css
/* special styles for neurotidal website */





/*
background image
*/

.bg {
  background-image: url("/images/background/neurotidal-live-background.webp");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed !important;

  @media (max-width: 767px) {
    background-image: url("/images/background/neurotidal-live-background-mobile.webp");
      background-repeat: no-repeat !important;
      background-size: cover !important;
      background-attachment: fixed !important;
  }
}






/*
masthead
*/

.masthead {
    border-bottom: none !important;
    position: sticky !important;
}



/*
cookie banner
*/

#cookie-banner {
    display: block;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
    color: white;
    background-color: #174d45;
    padding: 10px;
    border-radius: 5px;
    z-index: 999;
    font-size: 70%
}


/*
socials
*/

.socials {
  list-style: none;
  margin: 0;
  padding: 0;
}

.socials__item {
  display: inline-block;
  margin-left: 7px;
}

.no-margin {
  margin-left: 0px;
}

.socials__item__link {
  left: -13px;
  position: relative;
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #ff4dfc;
  font-size: 24px;
  line-height: 50px;
  text-align: center;
  transition: background-color 0.3s ease;

  &:hover {
    background: #9940ff;
  }

}

















/*
standard classes like center & special classes
*/

.center {
    text-align: center;
}

.margin-sides {
    margin: 0 10vw;
}

.margin-top-xl {
    margin-top: 250px;
}

.margin-bottom {
    margin-bottom: 100px;
}

.audiovisual-text {
    font-size: 2.5em;
    font-weight: normal;
}

@media (max-width: 767px) {
    .audiovisual-text {
        font-size: 1.8em;
        font-weight: normal;
    }
}

.merch-header {
    margin-bottom: -40px;
}

.font-weight-normal {
    font-weight: normal;
}

.heading {
    font-family: 'Roboto';
    font-weight: 400;
    font-size: 200%;
}






/*
merch
*/

.merch {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.merch img {
    max-width: 100%;
    height: auto;
}

@media (max-width: 767px) {
    .merch {
        grid-template-columns: 1fr;
        gap: 0px;
    }
}

.merch img:hover {
    box-shadow: none !important;
    transform: scale(1.05);
}




/*
buttons
*/

.btn-neurotidal {
    margin-top: 10px;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #ff4dfc;
    color: #fff;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.btn-neurotidal:hover {
    background-color: #e63fc8;
}

a.btn {
    color: inherit;
    text-decoration: none;
    font-size: 1em;
    font-weight: normal;
    opacity: 0.9;
}

a.btn:hover {
    text-decoration: none !important;
}

.btn-bio {
    width: 35vw;
    margin-bottom: 35px;

}

@media (max-width: 767px) {
    .btn-bio {
        width: 60vw;
    }
}

.btn-one {
    background-color: #174d45;
}

.btn-two {
    background-color: #17374d;
}

.btn-three {
    background-color: #1b1e4d;
}

.btn-four {
    background-color: #2e134d;
}

.btn-one:hover {
    background-color: #144239;
}

.btn-two:hover {
    background-color: #142a3c;
}

.btn-three:hover {
    background-color: #161849;
}

.btn-four:hover {
    background-color: #271031;
}




/*
boxes
*/

.text-box {
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 15px;
}

.bio-box {
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 15px;
    width: 40vw;
    margin: auto;
}

@media (max-width: 767px) {
    .bio-box {
        width: auto;
    }
}


/*
tourdates
*/

.tour-date {
    position: relative;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    padding: 20px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    color: #fff;
}

.tour-date h3 {
    font-size: 1.5em;
    margin: 5px 0;
}

.tour-date p {
    font-size: 1em;
    margin: 5px 0;
}

.hidden {
    visibility: none;
}




/*
EPK
*/

.epk-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgba(0, 0, 0, 0.75);
    border-radius: 5px;
    padding: 20px;
}

.epk-image {
    max-height: 100%;
    width: 35vw;
    border-radius: 5px;
}

.epk-text-container-left {
    flex: 1;
    margin-left: 20px;
    font-size: 70%

}

.epk-text-container-right {
    flex: 1;
    margin-right: 20px;
    font-size: 70%

}

.epk-heading {
    margin-bottom: 10px;
}

.epk-subtext {
    margin: 0;
}

@media (max-width: 767px) {
    .epk-container {
        flex-direction: column;
        align-items: stretch;
        text-align: center;
    }

    .epk-image {
        width: 100%;
        max-height: none;
        margin-bottom: 20px;
    }

    .epk-text-container-left {
        margin-left: 0;
        font-size: 85%
    }

    .epk-text-container-right {
        margin-right: 0;
        font-size: 85%
    }


}


.grid-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 16px;
}

@media (max-width: 767px) {
  .grid-container {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
  }
}

.grid-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.grid-container-1x4 {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

@media (max-width: 765px) {
  .grid-container-1x4 {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }
}

.grid-image-1x4 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 5px;
}

